# educational_modules

./: README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
docker/: Dockerfile  entrypoint.sh
modules/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  tests.py
modules/fixtures/: modules.json
modules/migrations/: 0001_initial.py
users/: api_urls.py  api_views.py  models.py  serializers.py  tests.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py
